# katas

./: README.md  pyproject.toml
katas/: detect_pangram.py  digit_x_digit.py  find_the_unique_number.py  first_non_repeating_character.py  odd_or_even.py  pete_the_baker.py  sum_of_numbers.py  the_hashtag_generator.py  toms_katas.py  your_order_please.py
tests/katas/: test_detect_pangram.py  test_digit_x_digit.py  test_find_the_unique_number.py  test_first_non_repeating_character.py  test_odd_or_even.py  test_pete_the_baker.py  test_sum_of_numbers.py  test_the_hashtag_generator.py  test_your_order_please.py
