[tool.poetry]
name = "katas"
version = "0.1.0"
description = ""
authors = ["elthorne <46898565+elthorne@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.3.1"

[tool.pytest.ini_options]
pythonpath = [
    "."
]

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
